# Hestia

./: .gitignore  CMakeLists.txt  __init__.py  classes.txt  commands.txt  main.cpp
Hand Detection.yolov11/: README.dataset.txt  README.roboflow.txt  data.yaml
